version 1.2.5
- fix problem with acf and pacf calculations

3/30/2004 version 1.2.4
- Add ARMAX models: ARMA with exogenous variables
- Add GARCH models, using Fiorentini-Calzolari-Panattoni approach
  (Journal of Applied Econometrics, 1996)
- Add "resample" function to genr, for bootstrapping test
  statistics
- Loops: allow use of a variable name rather than a number to
  control a "number of times" loop
- Fix genr bug: problem with an undefined varname in a lag
  context 
- Fix bug: when saved via the objectname mechanism, arma models
  were appearing both as saved models and as saved text
- Fix bug: autocorrelation test from model window Tests menu
  was broken by new options mechanism
- Fix bug: "--verbose" option for Johansen test was broken
- Fix curious Windows bug: line-endings in scripts were not
  recognized in some cases
- Improve path-searching for data files
- Beef up error-checking on opening of native gretl data files
- Improve error-checking on pvalue command
- Fix for Excel importer: allow more than 16K rows
- Error-checking for new varname in genr
- Add robust standard errors/VCV for tsls command
- Allow use of wls command in a loop
- CSV import: add automatic conversion of string variables
  to code numbers
- Add Three-Stage Least Squares (system type=3sls): this is
  still at the testing stage

2/24/2004 version 1.2.3
- Add Tobit model command, with a new plugin (thanks to Jack
  Lucchetti)
- Add color selector for the histogram in frequency plots
- Allow appending/merging of gretl-format data in GUI program
- Fix bug: genr was broken for some special cases of
  repeated function calls
- Fix bug: normal pvalues were being shown as zero for
  large |z-scores| > 9.0
- Fix bug: the NIST checker plugin was broken for locales
  that use ',' as decimal point  
- Daily data: construct a special plotting variable so
  daily time-series can be graphed better; also allow
  for 4-digit years in daily dates (YYYY/MM/DD) on input;