@@ -1,6 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <html> <head>
-<title>Data for gretl</title>
+<title>gretl on OS X</title>
 <LINK REL=STYLESHEET TYPE="text/css" 
 HREF="./css-gretl.html">
 </head>
