@@ -1,5 +1,10 @@
 version 1.2.5
 - fix problem with acf and pacf calculations
+- add Prais-Winsten estimator for AR1 models 
+- fix bugs in gretl "graph page"
+- fix some translation bugs
+- fix headers for compilation on Mac OS X
+- fix bug in lmtest option handling
 
 3/30/2004 version 1.2.4
 - Add ARMAX models: ARMA with exogenous variables
